# 714assign1

Game-of-Life-in-parallel-MPI-OpenMP-CUDA/: CMakeLists.txt  a.out  input.txt  mpi_output.out
Game-of-Life-in-parallel-MPI-OpenMP-CUDA/src/: 250.100  2d_input_gen.cpp  Makefile  a.out  ass1_mpi.cpp  ass2_mpi.cpp  assign1  final.500x500.data  final.500x500.data.txt  game.c  game_mpi.c  life.1.250x250.100.csv  life.1.250x250.data  life.1.250x250.data.txt  life.2.250x250.data  out.txt
