CMAKE_MINIMUM_REQUIRED(VERSION 3.15 FATAL_ERROR)

PROJECT(GameLife)

SET(CMAKE_CXX_STANDARD 14)

SET(CMAKE_EXPORT_COMPILE_COMMANDS on)

find_package(MPI REQUIRED)

INCLUDE_DIRECTORIES(
        ${MPI_C_INCLUDE_PATH}
)

link_directories(${MPI_C_LINK_FLAGS})

set(CMAKE_COMPILE_FLAGS ${CMAKE_COMPILE_FLAGS} ${MPI_C_COMPILE_FLAGS})

ADD_EXECUTABLE(
        game_mpi.exe
        src/game_mpi.c
)

TARGET_LINK_LIBRARIES(game_mpi.exe
        ${MPI_C_LIBRARIES})

INSTALL(TARGETS game_mpi.exe DESTINATION ${PROJECT_SOURCE_DIR})